--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -13,7 +13,8 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "@shared/*": ["../../packages/shared/src/*"]
+      "@shared/*": ["../../packages/shared/src/*"],
+      "@/*": ["src/*"]
     }
   },
   "include": ["src/**/*"],
