--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
     "jsx": "react",
-    "target": "ES6",
     "module": "Node16",
     "outDir": "./dist",
     "rootDir": "./src",
@@ -11,6 +10,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
+    "lib": ["es2016", "dom"],
+    "target": "es2016",
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["../../packages/shared/src/*"],
