--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
+    "json-rpc-2.0": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.0",
     "zod": "^3.20.0"
