--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -2,8 +2,9 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "Node16",
+    "moduleResolution": "node16",
     "outDir": "./dist",
-    "rootDir": "../../",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -11,9 +12,9 @@
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["../../packages/shared/src/*"],
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
-} 
+}
