--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,7 +16,10 @@
     "express-session": "^1.18.1",
     "json-rpc-2.0": "^1.7.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.0",
+    "uuid": "^11.1.0",
+    "uuidv4": "^6.2.13",
     "zod": "^3.20.0"
   },
   "keywords": [],
@@ -31,6 +34,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/lodash": "^4.17.15",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.12.0",
     "nodemon": "^3.1.9",
