--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"],
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["../../packages/shared/src/*"],
@@ -16,5 +17,6 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "files":["./src/types/express.d.ts"]
 }
